syntax = "proto3";

package geo;

service Geo {
  // Obtains the Locations contained within the given Rectangle.
  rpc BoundedBox(Request) returns (Result);
}

// The latitude and longitude of the current location.
message Request {
  float lat = 1;
  float lon = 2;
}

message Result {
  repeated string hotelIds = 1;
}
